<resources>
    <string name="app_name">BakeBalance</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Настройки</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_login">Введите логин</string>
    <string name="enter_password">Введите пароль</string>
    <string name="log_in">Войти</string>
    <string name="register">Зарегистрироваться</string>
    <string name="products">Изделия</string>
    <string name="cooking">Производство</string>
    <string name="sales">Продажи</string>
    <string name="full_report">Полный отчет</string>
    <string name="settings">Настройки</string>
    <string name="recover_password_text">Забыли пароль?</string>

    <string-array name="time_periods">
        <item>За сегодня</item>
        <item>За текущую неделю</item>
        <item>За текущий месяц</item>
        <item>За текущий год</item>
        <item>За все время</item>
    </string-array>

    <string-array name="pref_sync_frequency_titles">
        <item>Изделия</item>
        <item>Производство</item>
        <item>Продажи</item>
        <item>Полный отчет</item>
        <item>Настройки</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
</resources>