<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/product_icon"
            android:title="@string/products" />
        <item
            android:id="@+id/nav_cooking"
            android:icon="@drawable/cooking_icon"
            android:title="@string/cooking" />
        <item
            android:id="@+id/nav_sales"
            android:icon="@drawable/sale_icon"
            android:title="@string/sales" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/report_icon"
            android:title="@string/full_report" />
        <item
            android:id="@+id/nav_admin_menu"
            android:icon="@drawable/add_icon"
            android:title="Администрирование" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings_icon"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_currency"
            android:icon="@drawable/currency_exchange_24px"
            android:title="Курс валют" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/info_24px"
            android:title="О проекте" />
    </group>
</menu>